// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wc-elixir-utils-service-list renders 1`] = `
Object {
  "body": <body>
  <div>
    <wc-elixir-utils-service-list>
      <div class="flex">
        <input class="border-2 flex-1 focus:outline-none focus:shadow mr-2 px-3 py-2 rounded-lg text-sm" placeholder="Search by service name..." value="">
        <button class="bg-primary focus:outline-none px-5 py-2 rounded-lg text-white text-xs w-24">
          All
        </button>
      </div>
      <div class="border-gray-200">
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 1
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Owned
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-0">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice1
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 1
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <button class="bg-gray-300 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-gray-500 w-full">
                    Delete Service
                  </button>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-red-500 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Revoke Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 2
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Managed
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-1">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice2
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 2
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <div></div>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 3
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs"></span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-2">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice3
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 3
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div></div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 4
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Managed
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-3">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice4
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 4
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <div></div>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-red-500 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Revoke Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 5
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Owned
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-4">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice5
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 1
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <button class="bg-gray-300 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-gray-500 w-full">
                    Delete Service
                  </button>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <br>
      <div class="align-middle flex justify-center">
        <button class="border-2 border-gray-100 focus:outline-none h-9 hover:shadow-lg invisible mr-3 p-1.5 rounded-full shadow w-9">
          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" fill-rule="evenodd"></path>
          </svg>
        </button>
        <button class="bg-primary focus:outline-none h-9 hover:shadow-lg mx-1 p-1 rounded-lg shadow text-white w-9">
          1
        </button>
        <button class="focus:outline-none h-9 hover:shadow-lg mx-1 p-1 rounded-lg shadow w-9">
          2
        </button>
        <button class="focus:outline-none h-9 hover:shadow-lg mx-1 p-1 rounded-lg shadow w-9">
          3
        </button>
        <button class="focus:outline-none h-9 hover:shadow-lg mx-1 p-1 rounded-lg shadow w-9">
          4
        </button>
        <button class="border-2 border-gray-100 focus:outline-none h-9 hover:shadow-lg ml-3 p-1.5 rounded-full shadow w-9">
          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" fill-rule="evenodd"></path>
          </svg>
        </button>
      </div>
    </wc-elixir-utils-service-list>
  </div>
</body>,
  "build": Object {
    "allRenderFn": true,
    "appendChildSlotFix": false,
    "asyncLoading": true,
    "asyncQueue": true,
    "attachStyles": false,
    "cloneNodeFix": false,
    "cmpDidLoad": true,
    "cmpDidRender": true,
    "cmpDidUnload": true,
    "cmpDidUpdate": true,
    "cmpShouldUpdate": true,
    "cmpWillLoad": true,
    "cmpWillRender": true,
    "cmpWillUpdate": true,
    "connectedCallback": true,
    "constructableCSS": true,
    "cssAnnotations": false,
    "cssVarShim": true,
    "devTools": false,
    "disconnectedCallback": true,
    "dynamicImportShim": false,
    "element": true,
    "event": true,
    "hasRenderFn": true,
    "hostListener": true,
    "hostListenerTarget": true,
    "hostListenerTargetBody": true,
    "hostListenerTargetDocument": true,
    "hostListenerTargetParent": true,
    "hostListenerTargetWindow": true,
    "hotModuleReplacement": false,
    "hydrateClientSide": false,
    "hydrateServerSide": false,
    "hydratedAttribute": false,
    "hydratedClass": true,
    "initializeNextTick": true,
    "isDebug": false,
    "isDev": true,
    "isTesting": true,
    "lazyLoad": true,
    "lifecycle": true,
    "lifecycleDOMEvents": true,
    "member": true,
    "method": true,
    "mode": true,
    "observeAttribute": true,
    "profile": true,
    "prop": true,
    "propBoolean": true,
    "propMutable": true,
    "propNumber": true,
    "propString": true,
    "reflect": true,
    "safari10": false,
    "scoped": true,
    "scriptDataOpts": false,
    "shadowDelegatesFocus": true,
    "shadowDom": true,
    "shadowDomShim": false,
    "slot": true,
    "slotChildNodesFix": false,
    "slotRelocation": true,
    "state": true,
    "style": true,
    "svg": true,
    "taskQueue": true,
    "transformTagName": true,
    "updatable": true,
    "vdomAttribute": true,
    "vdomClass": true,
    "vdomFunctional": true,
    "vdomKey": true,
    "vdomListener": true,
    "vdomPropOrAttr": true,
    "vdomRef": true,
    "vdomRender": true,
    "vdomStyle": true,
    "vdomText": true,
    "vdomXlink": true,
    "watchCallback": true,
  },
  "doc": ,
  "flushLoadModule": [Function],
  "flushQueue": [Function],
  "setContent": [Function],
  "styles": Map {},
  "waitForChanges": [Function],
  "win": [MockWindow],
}
`;

exports[`wc-elixir-utils-service-list renders itemPerPage 1`] = `
Object {
  "body": <body>
  <div>
    <wc-elixir-utils-service-list>
      <div class="flex">
        <input class="border-2 flex-1 focus:outline-none focus:shadow mr-2 px-3 py-2 rounded-lg text-sm" placeholder="Search by service name..." value="">
        <button class="bg-primary focus:outline-none px-5 py-2 rounded-lg text-white text-xs w-24">
          All
        </button>
      </div>
      <div class="border-gray-200">
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 1
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Owned
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-0">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice1
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 1
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <button class="bg-gray-300 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-gray-500 w-full">
                    Delete Service
                  </button>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-red-500 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Revoke Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 2
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Managed
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-1">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice2
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 2
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <div></div>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 3
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs"></span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-2">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice3
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 3
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div></div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 4
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Managed
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-3">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice4
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 4
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <div></div>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-red-500 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Revoke Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 5
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Owned
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-4">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice5
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 1
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <button class="bg-gray-300 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-gray-500 w-full">
                    Delete Service
                  </button>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 6
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Authorized
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-5">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice6
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 2
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <div></div>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-red-500 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Revoke Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 7
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs"></span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-6">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice7
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 3
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div></div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 8
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Managed
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-7">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice8
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 4
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <div></div>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 9
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Owned
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-8">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice9
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 1
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <button class="bg-gray-300 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-gray-500 w-full">
                    Delete Service
                  </button>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-red-500 focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Revoke Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="border-2 border-gray-100 flex-row hover:shadow-md mt-2 px-3 py-2 rounded-lg shadow-sm">
          <div class="cursor-pointer flex focus:outline-none justify-between">
            <div class="font-semibold text-lg title">
              Service 10
            </div>
            <div class="mt-0.5">
              <span class="font-extralight italic mr-2 text-xs">
                Managed
              </span>
              <svg class="h-5 inline w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                <path clip-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" fill-rule="evenodd"></path>
              </svg>
            </div>
          </div>
          <div class="hidden pt-2 wc-service-index-9">
            <a class="border-b-2 border-white cursor-pointer duration-500 ease-out font-bold hover:border-primary text-primary text-xs transition" href="https://docs.myservice.example.com" rel="noopener noreferrer" target="_blank">
              https://docs.myservice.example.com
            </a>
            <div class="text-gray-500">
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempora repudiandae quisquam? Voluptatum qui accusantium odit quibusdam ea rem deleniti dolor accusamus laborum! Vero magnam modi illum ad. Id, voluptates.
            </div>
            <br>
            <div>
              <div>
                <span>
                  Service Id:
                </span>
                <span class="font-mono">
                  org.ga4gh.myservice10
                </span>
              </div>
              <div class="text-base">
                <span>
                  Organization:
                </span>
                Organization 2
                <a href="https://example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-2 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
                <a href="mailto:support@example.com" rel="noopener noreferrer" target="_blank">
                  <svg class="h-4 inline mb-1 ml-1.5 text-primary w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                    <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
                  </svg>
                </a>
              </div>
              <div class="text-base">
                <span>
                  Version:
                </span>
                <span class="font-mono">
                  1.0.0
                </span>
              </div>
            </div>
            <br>
            <div class="text-sm">
              <div class="md:flex md:justify-between">
                <div>
                  <button class="bg-primary focus:outline-none hover:shadow-lg md:mr-4 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Edit Service
                  </button>
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mr-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Manage Permission
                  </button>
                  <div></div>
                </div>
                <div class="md:flex md:justify-end">
                  <button class="bg-secondary focus:outline-none hover:shadow-lg md:mx-2 md:w-auto my-2 px-4 py-2 rounded-lg text-white w-full">
                    Grant Authorization
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <br>
      <div class="align-middle flex justify-center">
        <button class="border-2 border-gray-100 focus:outline-none h-9 hover:shadow-lg invisible mr-3 p-1.5 rounded-full shadow w-9">
          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" fill-rule="evenodd"></path>
          </svg>
        </button>
        <button class="bg-primary focus:outline-none h-9 hover:shadow-lg mx-1 p-1 rounded-lg shadow text-white w-9">
          1
        </button>
        <button class="focus:outline-none h-9 hover:shadow-lg mx-1 p-1 rounded-lg shadow w-9">
          2
        </button>
        <button class="border-2 border-gray-100 focus:outline-none h-9 hover:shadow-lg ml-3 p-1.5 rounded-full shadow w-9">
          <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
            <path clip-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" fill-rule="evenodd"></path>
          </svg>
        </button>
      </div>
    </wc-elixir-utils-service-list>
  </div>
</body>,
  "build": Object {
    "allRenderFn": true,
    "appendChildSlotFix": false,
    "asyncLoading": true,
    "asyncQueue": true,
    "attachStyles": false,
    "cloneNodeFix": false,
    "cmpDidLoad": true,
    "cmpDidRender": true,
    "cmpDidUnload": true,
    "cmpDidUpdate": true,
    "cmpShouldUpdate": true,
    "cmpWillLoad": true,
    "cmpWillRender": true,
    "cmpWillUpdate": true,
    "connectedCallback": true,
    "constructableCSS": true,
    "cssAnnotations": false,
    "cssVarShim": true,
    "devTools": false,
    "disconnectedCallback": true,
    "dynamicImportShim": false,
    "element": true,
    "event": true,
    "hasRenderFn": true,
    "hostListener": true,
    "hostListenerTarget": true,
    "hostListenerTargetBody": true,
    "hostListenerTargetDocument": true,
    "hostListenerTargetParent": true,
    "hostListenerTargetWindow": true,
    "hotModuleReplacement": false,
    "hydrateClientSide": false,
    "hydrateServerSide": false,
    "hydratedAttribute": false,
    "hydratedClass": true,
    "initializeNextTick": true,
    "isDebug": false,
    "isDev": true,
    "isTesting": true,
    "lazyLoad": true,
    "lifecycle": true,
    "lifecycleDOMEvents": true,
    "member": true,
    "method": true,
    "mode": true,
    "observeAttribute": true,
    "profile": true,
    "prop": true,
    "propBoolean": true,
    "propMutable": true,
    "propNumber": true,
    "propString": true,
    "reflect": true,
    "safari10": false,
    "scoped": true,
    "scriptDataOpts": false,
    "shadowDelegatesFocus": true,
    "shadowDom": true,
    "shadowDomShim": false,
    "slot": true,
    "slotChildNodesFix": false,
    "slotRelocation": true,
    "state": true,
    "style": true,
    "svg": true,
    "taskQueue": true,
    "transformTagName": true,
    "updatable": true,
    "vdomAttribute": true,
    "vdomClass": true,
    "vdomFunctional": true,
    "vdomKey": true,
    "vdomListener": true,
    "vdomPropOrAttr": true,
    "vdomRef": true,
    "vdomRender": true,
    "vdomStyle": true,
    "vdomText": true,
    "vdomXlink": true,
    "watchCallback": true,
  },
  "doc": ,
  "flushLoadModule": [Function],
  "flushQueue": [Function],
  "setContent": [Function],
  "styles": Map {},
  "waitForChanges": [Function],
  "win": [MockWindow],
}
`;
